Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8746

lustre umount hangs in distribute_txn_fini

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.10.0
    • Lustre 2.8.0, Lustre 2.10.0
    • 3
    • 9223372036854775807

      on our DNE testbed, umount hangs with the following call stack:

      2016-10-20 15:07:39 [14285.581098] INFO: task umount:182090 blocked for more than 120 seconds.
      2016-10-20 15:07:39 [14285.589651] "echo 0 > /proc/sys/kernel/hung_task_timeout_secs" disables this message.
      2016-10-20 15:07:39 [14285.599447] umount          D ffff887918187c20     0 182090 182089 0x00000080
      2016-10-20 15:07:39 [14285.608492]  ffff887918187a58 0000000000000086 ffff887918187fd8 ffff887f6e073ec0
      2016-10-20 15:07:39 [14285.617837]  ffff887918187fd8 ffff887918187fd8 ffff887f6e073ec0 ffff887efb6fb0b0
      2016-10-20 15:07:39 [14285.627161]  ffff887ec3f50240 ffff887efb6fb100 ffff887918187c20 ffff887918187c20
      2016-10-20 15:07:39 [14285.636476] Call Trace:
      2016-10-20 15:07:39 [14285.640213]  [<ffffffff8169f039>] schedule+0x29/0x70
      2016-10-20 15:07:39 [14285.646853]  [<ffffffffa0c679bd>] distribute_txn_fini+0xcd/0x130 [ptlrpc]
      2016-10-20 15:07:39 [14285.655433]  [<ffffffff810b4520>] ? wake_up_atomic_t+0x30/0x30
      2016-10-20 15:07:39 [14285.662928]  [<ffffffffa0f953ee>] lod_process_config+0x93e/0x15c0 [lod]
      2016-10-20 15:07:39 [14285.671314]  [<ffffffffa0e170a8>] ? lfsck_stop+0x1b8/0x4f0 [lfsck]
      2016-10-20 15:07:39 [14285.679182]  [<ffffffff811e5a63>] ? __kmalloc+0x233/0x280
      2016-10-20 15:07:39 [14285.686155]  [<ffffffffa0ff6ee2>] mdd_process_config+0x82/0x5c0 [mdd]
      2016-10-20 15:07:39 [14285.694330]  [<ffffffffa0eb91d6>] mdt_device_fini+0x1c6/0xfc0 [mdt]
      2016-10-20 15:07:39 [14285.702290]  [<ffffffffa099821c>] class_cleanup+0x8dc/0xd70 [obdclass]
      2016-10-20 15:07:39 [14285.710504]  [<ffffffffa099abfc>] class_process_config+0x1e2c/0x2f70 [obdclass]
      2016-10-20 15:07:39 [14285.719555]  [<ffffffff811e5a63>] ? __kmalloc+0x233/0x280
      2016-10-20 15:07:39 [14285.726494]  [<ffffffffa099411b>] ? lustre_cfg_new+0x8b/0x400 [obdclass]
      2016-10-20 15:07:39 [14285.734866]  [<ffffffffa099be2f>] class_manual_cleanup+0xef/0x810 [obdclass]
      2016-10-20 15:07:39 [14285.743601]  [<ffffffffa09cde8e>] server_put_super+0x8de/0xcd0 [obdclass]
      2016-10-20 15:07:39 [14285.752002]  [<ffffffff81209572>] generic_shutdown_super+0x72/0xf0
      2016-10-20 15:07:39 [14285.759721]  [<ffffffff81209942>] kill_anon_super+0x12/0x20
      2016-10-20 15:07:39 [14285.766748]  [<ffffffffa099f592>] lustre_kill_super+0x32/0x50 [obdclass]
      2016-10-20 15:07:39 [14285.775033]  [<ffffffff81209cf9>] deactivate_locked_super+0x49/0x60
      2016-10-20 15:07:39 [14285.782803]  [<ffffffff8120a2f6>] deactivate_super+0x46/0x60
      2016-10-20 15:07:39 [14285.789884]  [<ffffffff812282c5>] mntput_no_expire+0xc5/0x120
      2016-10-20 15:07:39 [14285.797046]  [<ffffffff81229440>] SyS_umount+0xa0/0x3b0
      2016-10-20 15:07:39 [14285.803615]  [<ffffffff816aa4c9>] system_call_fastpath+0x16/0x1b
      

            laisiyao Lai Siyao
            dinatale2 Giuseppe Di Natale (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: