LU-8746 update: restore tdtd_refcount during failure

During batchid_update, tdtd_refcount should be restored
once error happens, otherwise tdtd_refcount will not
reach 0 which will cause distribute thread hang during
umount.

Change the distribute thread name to "dist_txn".

Signed-off-by: Di Wang <di.wang@intel.com>
Change-Id: I585cc4ceb37a7f3ddaf38201306e0a331fb43e74
Reviewed-on: https://review.whamcloud.com/26888
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>
Reviewed-by: Fan Yong <fan.yong@intel.com>